# xdm-piano

./: .gitignore  Makefile.am  README.md  configure.ac
include/lib/: dsp.h  karplus_strong.h  piano.h  utils.h  waveguide.h
src/: Makefile.am  filter.c  filter.h  jack_client.c  karplus_strong.c  karplus_strong.h  piano_string.c  piano_string.h  utils.c  utils.h  waveguide.c  waveguide.h
src/jack/: jack_client.c
src/lib/: dsp.c  karplus_strong.c  piano.c  utils.c  waveguide.c
test/: test.c
